# auth-api

./: Cargo.toml  Dockerfile  pom.xml
.github/workflows/: ci.deploy.yml
src/: config.rs  db.rs  main.rs  openapi.rs  schema.rs  state.rs
src/entities/: accounts.rs  mod.rs
src/handler/: accounts.rs  session.rs
src/handler/auth/: github.rs
src/main/java/com/liberte/authapi/: AuthApiApplication.java  HealthController.java
src/main/resources/: application.yml
src/repo/: account_credentials.rs  accounts.rs
src/schema/: account_authorizations.rs  account_credentials.rs  accounts.rs  mod.rs
src/service/: accounts.rs  config.rs  mod.rs  session.rs
